# Cmake_OpenGL

./: CMakeLists.txt  CMake_OpenGL.cpp  CMake_OpenGL.h
Includes/Manager/: GameManager.h
Includes/Scenes/: TestScene.h
Libraries/glad/: glad.h
Sources/: CMakeLists.txt  main.cpp
Sources/Manager/: GameManager.cpp  SceneManager.cpp
Sources/Scenes/: TestScene.cpp
