# CMakeList.txt : CMake project for CMake_OpenGL, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CMake_OpenGL")

# Add source to this project's executable.
add_executable (CMake_OpenGL "CMake_OpenGL.cpp" "CMake_OpenGL.h")

# TODO: Add tests and install targets if needed.
